--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 :root {
   --modal-duration: 1s;
   --primary-color: #38183a;
-  --secondary-color: #feabae;
+  --secondary-color: #b75ff2;
   --thirdChoice-color: #ffc9b5;
   --fourthChoice-color: #c7e8f3;
 }
@@ -20,6 +20,9 @@ body.show-nav {
 /* nav img{
     width: 105px;
 } */
+#banner {
+  width: max-content;
+}
 nav {
   background-color: var(--primary-color);
   border-right: 2px solid rgba(200, 200, 200, 0.1);
@@ -35,7 +38,7 @@ nav h2 {
   color: aliceblue;
 }
 nav .logo {
-  padding: 30px;
+  padding: 15px;
   text-align: center;
 }
 nav ul {
@@ -49,6 +52,7 @@ nav .logo img {
   border-radius: 25%;
 }
 nav ul li {
+  text-align: center;
   border-bottom: 2px solid rgba(200, 200, 200, 0.1);
   padding: 20px;
 }
@@ -61,7 +65,7 @@ nav ul li a {
 }
 nav ul li a:hover {
   text-decoration: underline;
-}
+} /* --The pop up buttonHere --*/
 .notification-container {
   background-color: rgba(100, 100, 200, 0.3);
   border-radius: 0 0 10px 10px;
@@ -77,7 +81,7 @@ nav ul li a:hover {
 .notification-container.show {
   transform: translateY(50px);
 }
-
+/* --Banner of page started Here --*/
 header {
   background-color: var(--secondary-color);
   font-size: 130%;
@@ -89,11 +93,12 @@ header {
 header h1 {
   color: var(--primary-color);
   margin: 0;
+  width: 100%vw;
 }
 header p {
-  color: rgb(155, 87, 87);
+  color: #b75ff2;
   margin: 5px 0;
-}
+} /* --Focus on Button started Here --*/
 button,
 input[type="submit"] {
   /*this is the contact me button*/
@@ -121,15 +126,18 @@ button:focus {
   text-align: center;
 }
 .container {
+  
+  background-color: rgba(100, 100, 200, 0.3);
   padding: 15px;
-  margin: 0 auto;
-  max-width: 100%;
-  width: 856px;
+  max-height: 100%;
+  max-width: 850px;
+  
+  /* width: 856px; */
 }
 .container ul {
   list-style-type: none;
   text-align: center;
-}
+} /* --Modal started Here --*/
 .modal-container {
   display: none;
   background-color: rgba(200, 200, 200, 0.6);
@@ -198,5 +206,3 @@ button:focus {
     opacity: 1;
   }
 }
-/* This was my first time using modals for my webpage  
-I got to experiment with keyframes and using variables inside of css */
