--- a/assets/style.css
+++ b/assets/style.css
@@ -6,9 +6,9 @@
 }
 :root {
   --modal-duration: 1s;
-  --primary-color: #38183a;
-  --secondary-color: #b75ff2;
-  --thirdChoice-color: #99f25e;
+  --primary-color: #d3a4d6;
+  --secondary-color: #d8a1fd;
+  --thirdChoice-color: #79f526;
   --fifthChoice-color: #f25e99;
   --fourthChoice-color: #c7e8f3;
 }
