--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,18 +12,21 @@
   --text-highlight-color: #57e4e9;
   --fifthChoice-color: #f25e99;
   --fourthChoice-color: #c7e8f3;
-  --banner-color: #921919;   /* button color */
+  --banner-color: #921919; /* button color */
   --accents-color: #7300c0;
 }
+
 body {
   font-family: "Walter+Turncoat", sans-serif;
   margin: 0;
   transition: transform 0.5s ease-in-out;
-  background-color:var(--secondary-color);
+  /* background-color: var(--secondary-color); */
 }
+
 body.show-nav {
   transform: translate(256px);
 }
+
 /* nav img{
     width: 105px;
 } */
@@ -38,13 +42,16 @@ nav {
   z-index: 100;
   transform: translateX(-100%);
 }
+
 nav h2 {
   color: var(--text-highlight-color);
 }
+
 nav .logo {
   padding: 15px;
   text-align: center;
 }
+
 nav ul {
   padding: 0;
   list-style-type: none;
@@ -89,7 +96,12 @@ nav ul li a:hover {
 header {
   padding: 75px;
   background-color: var(--banner-color);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
   font-size: 100%;
   position: relative;
   padding: 40px 15px;
@@ -152,7 +164,7 @@ button:focus {
 }
 .container h2 {
   color: var(--text-highlight-color);
-  
+
   text-align: center;
 } /*-----------------------------------Container Link -----------------------*/
 .container a {
@@ -247,3 +259,4 @@ button:focus {
     opacity: 1;
   }
 }
+
