--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ body {
   font-family: "Walter+Turncoat", sans-serif;
   margin: 0;
   transition: transform 0.5s ease-in-out;
-  /* background-color: var(--secondary-color); */
+  background-color: var(--secondary-color);
 }
 
 body.show-nav {
@@ -259,4 +259,3 @@ button:focus {
     opacity: 1;
   }
 }
-
